--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,96 +52,114 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColorHint="#000">
-
-            <EditText
-                android:id="@+id/crmIdTextView"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                      android:orientation="vertical"
+                      android:visibility="gone">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="CRM ID"/>
+                android:textColorHint="#000"
+                >
 
-        </android.support.design.widget.TextInputLayout>
+                <EditText
+                    android:id="@+id/crmIdTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="CRM ID"/>
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Sexo"/>
-        <RadioGroup
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton android:id="@+id/radioMale"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:checked="true"
-                         android:onClick="onRadioButtonClicked"
-                         android:text="Male"/>
-
-            <RadioButton android:id="@+id/radioFemale"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:onClick="onRadioButtonClicked"
-                         android:text="Female"/>
-        </RadioGroup>
-
-        <Button
-            android:id="@+id/dateButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Fecha de Nacimiento"/>
+            </android.support.design.widget.TextInputLayout>
 
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_tag"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:textColorHint="#000">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Sexo"/>
+            <RadioGroup
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/tagTextView"
+                <RadioButton android:id="@+id/radioMale"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:checked="true"
+                             android:onClick="onRadioButtonClicked"
+                             android:text="Male"/>
+
+                <RadioButton android:id="@+id/radioFemale"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:onClick="onRadioButtonClicked"
+                             android:text="Female"/>
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/dateButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nuevo TAG"/>
+                android:layout_marginTop="15dp"
+                android:text="Fecha de Nacimiento"/>
 
-        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/listTags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textStyle="bold"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/addTagButton"
-                android:layout_width="wrap_content"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_tag"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Añadir Tag"/>
-            <Button
-                android:id="@+id/clearTagsButton"
-                android:layout_width="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColorHint="#000">
+
+                <EditText
+                    android:id="@+id/tagTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Nuevo TAG"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:id="@+id/listTags"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Limpiar Tags"/>
+                android:textSize="16dp"
+                android:textStyle="bold"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/addTagButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Añadir Tag"/>
+                <Button
+                    android:id="@+id/clearTagsButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Limpiar Tags"/>
+            </LinearLayout>
         </LinearLayout>
 
         <Button
-            android:layout_marginTop="16dp"
             android:id="@+id/openLogViewButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Abrir Log"/>
+
+        <Button
+            android:id="@+id/clearScheme"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Clear Scheme"/>
+
+        <EditText
+            android:id="@+id/schemeEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Orchextra Scheme"
+            />
 
     </LinearLayout>
 
