--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,14 +45,16 @@
 
 
     <LinearLayout
-        android:id="@+id/layoutContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+        <LinearLayout
+            android:id="@+id/layoutContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:visibility="gone">
             <android.support.design.widget.TextInputLayout
@@ -158,7 +160,7 @@
             android:id="@+id/schemeEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Orchextra Scheme"
+            android:hint="Orchextra Scheme / Hide User Layout"
             />
 
     </LinearLayout>
